[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/Menu.gd" type="Script" id=1]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 232.0
margin_top = 40.0
margin_right = 346.0
margin_bottom = 53.0
rect_scale = Vector2( 5, 5 )
text = "REACTION TEST"
scroll_active = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 160.0
margin_right = 696.0
margin_bottom = 208.0
text = "PLAY"

[node name="HelpButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 232.0
margin_right = 696.0
margin_bottom = 280.0
text = "HOW TO PLAY"

[node name="BackButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 304.0
margin_right = 696.0
margin_bottom = 352.0
text = "BACK"

[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="HelpButton" to="." method="_on_HelpButton_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
